[tool.poetry]
name = "blow"
version = "0.1.0"
description = "Small script to dos evil hackers."
authors = ["4thel00z <4thel00z@gmail.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
grequests = "^0.6.0"


[tool.poetry.scripts]
blow = 'blow:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
